--- a/app/src/main/res/layout/fragment_add_edit_comp_element.xml
+++ b/app/src/main/res/layout/fragment_add_edit_comp_element.xml
@@ -7,12 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/edit_text_list_comp_elem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="5sp"
+        style="@style/white_card_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -101,14 +96,8 @@
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_save_comp_elem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1"
-        android:backgroundTint="@color/primary_green"
+        style="@style/greenFAB"
         android:contentDescription="Save"
-        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_baseline_save_24" />
