--- a/app/src/main/res/layout/activity_bike.xml
+++ b/app/src/main/res/layout/activity_bike.xml
@@ -7,7 +7,6 @@
     android:background="@color/background_color"
     android:fitsSystemWindows="true">
 
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view_plant_detail"
         android:layout_width="match_parent"
@@ -22,15 +21,8 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/direction_card_viewInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/white"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="5sp">
+                style="@style/white_card_view"
+                android:layout_marginBottom="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,14 +138,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/direction_card_viewDiagram"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/white"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="5sp">
+                style="@style/white_card_view">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -194,18 +179,18 @@
                             app:layout_constraintEnd_toStartOf="@+id/add_buttonMode"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <Button
                             android:id="@+id/add_buttonMode"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="8dp"
                             android:background="@drawable/custom_rectangle_rounded_corners"
                             android:backgroundTint="@color/primary_green"
                             android:text="Woche"
                             android:textSize="20sp"
-                            android:layout_marginRight="8dp"
-                            android:layout_marginLeft="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/add_buttonright"
                             app:layout_constraintHorizontal_bias="0.5"
@@ -216,6 +201,7 @@
                             android:id="@+id/add_buttonright"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="8dp"
                             android:background="@drawable/custom_rectangle_rounded_corners"
                             android:backgroundTint="@color/primary_green"
                             android:text="right"
@@ -224,23 +210,14 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/add_buttonMode"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:layout_marginRight="8dp"
-                            />
+                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/direction_card_viewStatistics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/white"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="5sp">
+                style="@style/white_card_view">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -266,10 +243,7 @@
                         android:text="- km von 2500km"
                         android:textColor="@color/light_grey"
                         android:textSize="15sp" />
-
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -280,16 +254,12 @@
                 android:layout_marginBottom="32dp"
                 android:orientation="horizontal">
 
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/bike_tour_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:backgroundTint="@color/primary_green_lighter"
                     tools:listitem="@layout/list_item_image" />
             </LinearLayout>
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
