--- a/app/src/main/res/layout/fragment_comparing_list_overview.xml
+++ b/app/src/main/res/layout/fragment_comparing_list_overview.xml
@@ -20,18 +20,10 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_add_comp_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/primary_green"
-            android:clickable="true"
+            style="@style/greenFAB"
             android:layout_gravity="bottom|end"
-            android:src="@android:drawable/ic_input_add"
-            android:focusable="true"
-            android:contentDescription="Settings" />
-
+            android:contentDescription="Add list"
+            android:src="@android:drawable/ic_input_add" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </FrameLayout>
