--- a/app/src/main/res/layout/fragment_plant_overview.xml
+++ b/app/src/main/res/layout/fragment_plant_overview.xml
@@ -31,11 +31,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_plant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/primary_green"
+        style="@style/greenFAB"
         android:contentDescription="Add Plant"
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
