--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,19 +42,12 @@
 
                 <EditText
                     android:id="@+id/edit_text_station_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:ems="10"
+                    style="@style/edit_text_border"
                     android:hint="Default IP"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
                     android:text="192.168.0.11"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size" />
+                     />
 
             </LinearLayout>
 
@@ -67,19 +60,11 @@
 
                 <EditText
                     android:id="@+id/edit_text_station_port"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:ems="10"
+                    style="@style/edit_text_border"
                     android:hint="Port"
                     android:importantForAutofill="no"
                     android:inputType="numberSigned"
-                    android:text="15439"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size" />
+                    android:text="15439" />
 
             </LinearLayout>
 
@@ -102,19 +87,12 @@
 
                 <EditText
                     android:id="@+id/edit_text_server_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:ems="10"
+                    style="@style/edit_text_border"
                     android:hint="Default IP"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
                     android:text="192.168.0.12"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size" />
+         />
 
             </LinearLayout>
 
@@ -127,19 +105,12 @@
 
                 <EditText
                     android:id="@+id/edit_text_server_port"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:ems="10"
+                    style="@style/edit_text_border"
                     android:hint="Port"
                     android:importantForAutofill="no"
                     android:inputType="numberSigned"
                     android:text="15439"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size" />
+         />
 
             </LinearLayout>
 
@@ -186,19 +157,11 @@
 
                 <EditText
                     android:id="@+id/edit_text_device_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:ems="10"
+                    style="@style/edit_text_border"
                     android:hint="Name"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
-                    android:text="Arduino 1"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size" />
+                    android:text="Arduino 1" />
 
             </LinearLayout>
         </LinearLayout>
