--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -2,13 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/blurHelper"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginBottom="8dp"
-    android:minHeight="24dp"
-    app:cardCornerRadius="8dp">
+    style="@style/white_card_view"
+    android:minHeight="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
