--- a/app/src/main/res/layout/list_item_text.xml
+++ b/app/src/main/res/layout/list_item_text.xml
@@ -2,17 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/blurHelper"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:padding="8dp"
-    app:cardCornerRadius="8dp">
+    style="@style/white_card_view">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
 
         <RelativeLayout
             android:layout_width="match_parent"
