--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,5 +44,28 @@
         <item name="android:layout_marginRight">8dp</item>
         <item name="cardCornerRadius">16dp</item>
         <item name="cardElevation">5sp</item>
+        <item name="android:backgroundTint">@color/background_color_card_view</item>
     </style>
+
+    <style name="edit_text_border" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_height">@dimen/wrap_content</item>
+        <item name="android:layout_width">@dimen/match_parent</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:ems">10</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">@dimen/text_size</item>
+    </style>
+
+    <style name="image_view_container" >
+        <item name="android:layout_height">@dimen/wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:background">@drawable/custom_rectangle_rounded_corners</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:backgroundTint">@color/transparent</item>
+    </style>
+
 </resources>
