--- a/app/src/main/res/drawable/edit_text_custom.xml
+++ b/app/src/main/res/drawable/edit_text_custom.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-<size android:height="32dp"/>
-    <stroke android:width="1dip" android:color="@android:color/darker_gray"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <size android:height="32dp" />
+    <stroke
+        android:width="1.5dip"
+        android:color="@color/text_color" />
 
-    <corners android:radius="8dp"/>
+    <corners android:radius="8dp" />
 </shape>
