--- a/app/src/main/res/layout/activity_bike.xml
+++ b/app/src/main/res/layout/activity_bike.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
     android:fitsSystemWindows="true">
 
     <androidx.core.widget.NestedScrollView
@@ -51,19 +50,10 @@
 
                         <EditText
                             android:id="@+id/inputBikeFrom"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="8dp"
-                            android:layout_marginBottom="4dp"
-                            android:backgroundTint="@android:color/white"
-                            android:ems="10"
+                            style="@style/edit_text_border"
                             android:hint="Ausgangspunkt"
                             android:inputType="textPersonName"
-                            android:text="Unity Beta"
-                            android:textColor="@color/light_grey"
-                            android:textSize="@dimen/text_size" />
+                            android:text="Unity Beta" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -74,20 +64,11 @@
                         android:orientation="vertical">
 
                         <EditText
+                            style="@style/edit_text_border"
                             android:id="@+id/inputBikesTo"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="8dp"
-                            android:layout_marginBottom="4dp"
-                            android:backgroundTint="@android:color/white"
-                            android:ems="10"
                             android:hint="Zielpunkt"
                             android:inputType="textPersonName"
-                            android:text="Zuhause"
-                            android:textColor="@color/light_grey"
-                            android:textSize="@dimen/text_size" />
+                            android:text="Zuhause" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -99,17 +80,10 @@
 
                         <EditText
                             android:id="@+id/editTextNumberDecimal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginRight="8dp"
-                            android:layout_marginBottom="4dp"
-                            android:ems="10"
+                            style="@style/edit_text_border"
                             android:hint="20"
                             android:inputType="numberDecimal"
-                            android:text="20"
-                            android:textColor="@color/light_grey" />
+                            android:text="20" />
                     </LinearLayout>
 
 
