--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -248,7 +247,7 @@
                     android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:text="More Options"
-                    android:textColor="@color/primary_green_lighter" />
+                    android:textColor="@color/primary_green" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
