--- a/app/src/main/res/layout/fragment_add_edit_comp_element.xml
+++ b/app/src/main/res/layout/fragment_add_edit_comp_element.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background_color">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/edit_text_list_comp_elem"
@@ -28,8 +27,7 @@
 
                 <EditText
                     android:id="@+id/edit_text_comp_elem_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/edit_text_border"
                     android:hint="Title"
                     android:inputType="text" />
             </LinearLayout>
@@ -41,11 +39,9 @@
                 android:background="@drawable/edit_text_custom"
                 android:orientation="vertical">
 
-
                 <EditText
+                    style="@style/edit_text_border"
                     android:id="@+id/edit_text_comp_elem_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:hint="Description"
                     android:inputType="textMultiLine" />
             </LinearLayout>
