--- a/app/src/main/res/layout/fragment_comparing_list_overview.xml
+++ b/app/src/main/res/layout/fragment_comparing_list_overview.xml
@@ -7,8 +7,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout_comparing_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background_color">
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_comp_list"
