--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,18 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.RPICommunicator_V1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="colorOnBackground">@color/primary_green</item>
+
         <item name="colorPrimary">@color/primary_green</item>
-        <item name="colorPrimaryVariant">@color/primary_green_darker</item>
+        <item name="colorOnSurface">@color/background_color_card_view</item>
+        <item name="colorPrimaryVariant">@color/variant_green</item>
         <item name="colorOnPrimary">@color/text_color</item>  <!-- Text color in edit texts-->
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/medium_green_palette</item>
+        <item name="colorSecondary">@color/secondary_green</item>
         <item name="colorSecondaryVariant">@color/primary_green</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@android:color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/background_color</item>
-        <!-- Customize your theme here. -->
-        <item name="android:textColorHint">@color/red</item>
-    </style>
+        <item name="android:windowBackground">@color/background_color</item>
+     </style>
 
     <style name="Theme.RPICommunicator_V1.NoActionBar">
         <item name="windowActionBar">false</item>
