--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="light_grey">#676666</color>
     <color name="text_color">#E4E4E4</color>
     <color name="background_color">#B38C8C8C</color>
     <color name="background_color_card_view">#FFFFFF</color>
-
     <color name="gpio_label_light_grey">#B3C4C4C4</color>
 
     <color name="primary_green">#8f9779</color>
     <color name="primary_green_transparent">#888F9779</color>
-    <color name="primary_green_darker">#78866b</color> <!--color variant-->
-    <color name="primary_green_lighter">#738276</color> <!--color icon buttons-->
-    <color name="medium_green_palette">#738678</color> <!--secondary color-->
-
+    <color name="variant_green">#78866b</color>
+    <color name="secondary_green">#738678</color>
 
     <color name="red">#8F3B21</color>
-    <color name="text_primary">#F2000000</color> <!--F2 for 95% opacity-->
-    <color name="text_secondary">#8A000000</color> <!--8A for 54% opacity-->
-    <color name="text_primary_dark">#F2FFFFFF</color>
-    <color name="text_secondary_dark">#8AFFFFFF</color>
 
     <!-- GPIOs -->
     <color name="gpio_background">#353535</color>
