adapted margins to styles

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="transparent">#00FFFFFF</color>
+    <color name="light_grey">#676666</color>
     <color name="text_color">#000000</color>
     <color name="background_color">#282828</color>
     <color name="background_color_card_view">#646464</color>
