--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,15 +7,15 @@
         <item name="colorPrimary">@color/primary_green</item>
         <item name="colorOnSurface">@color/background_color_card_view</item>
         <item name="colorPrimaryVariant">@color/variant_green</item>
-        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorOnPrimary">@color/text_color</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondary_green</item>
         <item name="colorSecondaryVariant">@color/primary_green</item>
         <item name="colorOnSecondary">@android:color/black</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/background_color</item>
         <item name="android:windowBackground">@color/background_color</item>
+        <item name="android:statusBarColor">@color/background_color</item>
     </style>
 
     <style name="Theme.RPICommunicator_V1.NoActionBar">
