--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,9 +8,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewSettings"
+        style="@style/white_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/white_card_view"
         app:layout_constraintBottom_toTopOf="@+id/textViewSources"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +45,7 @@
                     android:hint="Default IP"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
-                    android:text="192.168.0.11"
-                     />
+                    android:text="192.168.0.11" />
 
             </LinearLayout>
 
@@ -66,25 +65,22 @@
                     android:text="15439" />
 
             </LinearLayout>
+
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="200dp" >
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:chipSpacing="0dp"
-                app:chipSpacingVertical="0dp"
-                app:chipSpacingHorizontal="8dp">
-                <com.google.android.material.chip.Chip
-                    style="@style/Widget.Material3.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Filter" />
+                android:layout_height="200dp">
 
-            </com.google.android.material.chip.ChipGroup>
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:chipSpacing="0dp"
+                    app:chipSpacingHorizontal="8dp"
+                    app:chipSpacingVertical="0dp">
+
+                </com.google.android.material.chip.ChipGroup>
             </ScrollView>
+
             <TextView
                 style="bold"
                 android:layout_width="match_parent"
@@ -108,8 +104,7 @@
                     android:hint="Default IP"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
-                    android:text="192.168.0.12"
-         />
+                    android:text="192.168.0.12" />
 
             </LinearLayout>
 
@@ -127,8 +122,7 @@
                     android:hint="Port"
                     android:importantForAutofill="no"
                     android:inputType="numberSigned"
-                    android:text="15439"
-         />
+                    android:text="15439" />
 
             </LinearLayout>
 
@@ -149,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edit_text_custom">
+
                 <Spinner
                     android:id="@+id/spinner_parent_device"
                     android:layout_width="match_parent"
@@ -160,6 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/edit_text_custom">
+
                 <Spinner
                     android:id="@+id/spinner_device_type"
                     android:layout_width="match_parent"
